# pypi

./: .gitignore  .gitmodules  Pipfile  build-docker.sh  compose.yaml  pyproject.toml  python.sh  setup.cfg  start.sh
docker/: Dockerfile  docker.org
releases/: Pipfile.lock-0.2.0  docker-11.tar  docker-8.tar  python.sh-0.3.0  python.sh-0.4.0
src/: Pipfile
src/pypi/: Pipfile
