[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "private"
version = "0.2.0"

license = { file = "LICENSE" }

readme = "README.md"

description = "install and run a private python package repo"
authors = [ { name = "Michael Mattie" , email = "codermattie@runbox.com" } ]

dependencies = []

[project.urls]
homepage = "https://github.com/bitcathedrals/private/"
repository = "https://github.com:bitcathedrals/private.git"

[project.scripts]
start = bin/start:exec
update = bin/update:exec


