[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "pypi"
version = "0.4.0"

license = { file = "LICENSE" }

readme = "README.md"

description = "install and run a private python package repo"
authors = [ { name = "Michael Mattie" , email = "mattie@codermattie.net" } ]

dependencies = []

[project.urls]
homepage = "https://github.com/bitcathedrals/pypi/"
repository = "https://github.com:bitcathedrals/pypi.git"

[project.scripts]
start = bin/start:exec
update = bin/update:exec


